<resources>
    <string name="app_name">QuizWiz</string>
    <string name="client_id">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</string>
    <string name="google_client_id">359932577588-fatrmtodaldk8a8n5kdbfijj2f95lbhj.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="Name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">Dont have an account? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

    <string name="back">Back</string>
    <string name="Save">Save</string>

    <string name="about">About QuizWiz</string>
    <string name="about_description">QuizWiz is a Trivia App that challenges your knowledge
across various topics, offering a away to learn and compete with friends</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_policy">We collect personal information such as your name,
email address, and username when you create an account. This data is used to personalize
your experience and connect you with other players.</string>
    <string name="Animals">Animals</string>
    <string name="Categories">Categories</string>
    <string name="Disney">Disney</string>
    <string name="History">History</string>
    <string name="Food">Food</string>
    <string name="Music">Music</string>
    <string name="TV_Shows">TV Shows</string>

    <string name="notifications">Notifications Alerts</string>
    <string name="sound">Sound and Music</string>
    <string name="light">Light or Dark Mode</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="choose">CHOOSE AN OPTION BELOW:</string>
    <string name="faq">Frequently Asked Questions(FAQ)</string>
    <string name="ask">Ask A Question</string>
    <string name="contact">Contact Support:</string>
    <string name="contact_info">Email Address: quizwiz@gmail.com        Contact Number: 081 264 9953</string>
    <string name="enter">Enter your question</string>
    <string name="Submit">Submit</string>
    <string name="Biometrics">Login with Biometrics</string>
    <string name="Sign_up">Sign up</string>
    <string name="Next">Next</string>
    <string name="DashBoard">Dashboard</string>
    <string name="goodluck">Please fill in the players details below and start the game!! Good luck</string>
    <string name="Player_1">Player 1</string>
    <string name="Player_2">Player 2</string>
    <string name="save_players">Save Players and Start Game</string>
    <string name="RESULTS">RESULTS</string>
    <string name="result_both">Results for Both Players:</string>
    <string name="PROFILE_SETTINGS">PROFILE SETTINGS</string>
    <string name="GAME_SETTINGS">GAME SETTINGS</string>
    <string name="HELP_AND_SUPPORT">HELP AND SUPPORT</string>
    <string name="about2">ABOUT</string>
    <string name="TRUE">TRUE</string>
    <string name="FALSE">FALSE</string>
    <string name="SINGLE_PLAYER">SINGLE PLAYER</string>
    <string name="MULTIPLE_PLAYER">MULTIPLE PLAYER</string>


    <string name="language_popup">This Quiz App offers a multi-language functionality! Simply go into your device settings and select either Afrikaans or isiZulu as the default language. Close and re-open the QuizApp and voila!</string>
    <string name="game_instructions">Instructions</string>
    <string name="game_instructions2">Please click a button to select your answer and click Next to proceed to the next question.</string>
    <string name="ok">OK</string>
    <string name="game_instructions_multi">Answer the questions in turns. Select the correct answer to earn points!</string>
    <string name="results_title">Horay!</string>
    <string name="results">Congratulations on completing the Quiz. Please click on any of the questions below to be given a deeper explanation of the Answer</string>
    <string name="multititle">Multi-language</string>

    <string name="msg_token_fmt" translatable="false">FCM Token: %1$s</string>


    <string name="ready_message1">are ready to go!</string>
    <string name="ready_message2">Players Ready</string>

    <string name="Profile">Profile</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Change_Language">Change Language</string>
</resources>