<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BabyBlue"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Pink"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="186dp"
            android:layout_height="205dp"
            android:layout_marginLeft="115sp"
            android:layout_marginTop="25sp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <!--        <com.google.android.material.button.MaterialButton-->
        <!--            android:layout_width="386dp"-->
        <!--            android:layout_height="460dp"-->
        <!--            android:layout_marginLeft="11dp"-->
        <!--            android:layout_marginTop="220dp"-->
        <!--            android:text=""-->
        <!--            app:backgroundTint="@color/lightBabyBlue"-->
        <!--            app:cornerRadius="0dp" />-->

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="220dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/faq"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFAQ"
            android:layout_width="376dp"
            android:layout_height="123dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="265dp"
            android:background="@color/lightBabyBlue"
            android:text="@string/ask"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="380dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="372dp"
            android:layout_height="83dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="425dp"
            android:background="@color/BabyBlue"
            android:text="@string/contact_info"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextFeedback"
            android:layout_width="368dp"
            android:layout_height="92dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="520dp"
            android:background="@color/lightBabyBlue"
            android:hint="@string/enter"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSubmitFeedback"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="226dp"
            android:layout_marginBottom="54dp"
            android:backgroundTint="@color/Pink"
            android:text="@string/Submit"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />

        <Button
            android:id="@+id/btnBackSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="215dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="54dp"
            android:backgroundTint="@color/Pink"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />


    </RelativeLayout>


</RelativeLayout>