<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#89CFF0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetails">


    <TextView
        android:id="@+id/palyer"
        android:layout_width="399dp"
        android:layout_height="93dp"
        android:text="@string/goodluck"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF1493"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:titleTextColor="@android:color/white" />


    <EditText
        android:id="@+id/player1txtview"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/Name"

        android:minHeight="48dp"
        android:textColor="#1F3F28"
        android:textColorHint="#1F3F28"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player2txtview"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/Name"

        android:minHeight="48dp"
        android:textColor="#1F3F28"
        android:textColorHint="#1F3F28"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/palyer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/palter2txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Player_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/startbtn"
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:backgroundTint="#FF1493"
        android:text="@string/save_players"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

</androidx.constraintlayout.widget.ConstraintLayout>